--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".CharacterListActivity"
+            android:name=".Views.CharacterListActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -20,7 +20,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".CharacterView"
+            android:name=".Views.CharacterView"
             android:label="@string/title_activity_character_view"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
